[tool.poetry]
name = "run-sdk"
version = "0.1.0"
description = ""
authors = ["Dat Nguyen <minhdat15012002@gmail.com>"]
readme = "README.md"
packages = [{ include = "run" }]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
